--- a/create_new_sermon/src/main/res/values/strings.xml
+++ b/create_new_sermon/src/main/res/values/strings.xml
@@ -1,1 +1,10 @@
-<resources></resources>
+<resources>
+    <string-array name="spinner_items">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+</resources>
